# Python-100-days-of-code

./: .gitignore
day_15/: main.py
day_17/: main.py  question_model.py  quiz_brain.py
day_18/: main.py  pyproject.toml  turtle_test.py
day_20_21/: food.py  main.py  pyproject.toml  scoreboard.py  snake.py
day_22/: ball.py  main.py  paddle.py  pyproject.toml  scoreboard.py
day_23/: car.py  main.py  player.py  pyproject.toml  scoreboard.py
day_25/: main.py  pyproject.toml
day_28/: main.py  pyproject.toml
day_29/: data.txt  main.py  pyproject.toml
day_31/: main.py  pyproject.toml
day_31/data/: words_to_learn.csv
day_33/: kanye.py  main.py  pyproject.toml
day_34/: data.py  main.py  pyproject.toml  quiz_brain.py  ui.py
day_35/: .env.sample  main.py  pyproject.toml
day_36/: .env.sample  main.py  pyproject.toml
day_37/: .env.sample  main.py  pyproject.toml
day_38/: .env.sample  main.py  pyproject.toml
day_46/: .env.sample  main.py  pyproject.toml
